--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="I am web developer based in Warsaw Poland. I create websites using the most contemporary technologies, with special emphasis on performance, accessibility and SEO.">
   <title>AlexWebDev</title>
 </head>
 
